# pythagorean48-codes

./: Cargo.toml  README.md
src/: lib.rs
